预测积分修改完毕

--- a/src/main/resources/templates/upload.html
+++ b/src/main/resources/templates/upload.html
@@ -297,14 +297,7 @@
 		<p><strong>这将会对您项目的积分推荐有较大影响</strong></p>
 	</div>
 	<div class="col-xs-12 col-md-4 mb-5" style="margin-left: 45px">
-		<select id="project_size" class="form-control form-control-chosen-required" data-placeholder="请选择项目预估大小...">
-			<option></option>
-			<option>100以下</option>
-			<option>100-500</option>
-			<option>500-1000</option>
-			<option>1000-5000</option>
-			<option>5000以上</option>
-		</select>
+		<input type="text" id="project_size">
 	</div>
 	<br>
 	<br>
